# cache-dit

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  .style.yapf  README.md  collect_env.py  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.copilot/: copilot-instructions.md
.copilot/skills/cuda-cpp-kernel/: SKILL.md  sm100-optimization-guide.md  sm103-optimization-guide.md  sm120-optimization-guide.md  sm90-optimization-guide.md  troubleshooting.md
.copilot/skills/cute-dsl-kernel/: SKILL.md  cute.md  cute_arch.md  cute_nvgpu.md  cute_nvgpu_common.md  cute_nvgpu_cpasync.md  cute_nvgpu_tcgen05.md  cute_nvgpu_warp.md  cute_nvgpu_warpgroup.md  cute_runtime.md  intro.md  pipeline.md  sm100-optimization-guide.md  sm103-optimization-guide.md  sm120-optimization-guide.md  utils.md  utils_sm100.md  utils_sm90.md
.copilot/skills/cutlass-cpp-kernel/: SKILL.md  (+5 more)
bench/: README.md  bench.py  bench_distill.py  perf.py  plot.py  utils.py
bench/cache/: README.md  bench.py  bench.sh  bench_distill.py  bench_distill.sh  bench_fast.sh  cache_config_dbc.yaml  cache_config_dbp.yaml  metrics.sh  metrics_distill.sh  metrics_fast.sh  perf.py  plot.py
bench/kernels/: bench_svdq_runtime.py  bench_svdq_runtime_focus.py
docs/: COMMUNITY.md  EXAMPLES.md  README.md
docs/benchmark/: HYBRID_CACHE.md
docs/developer_guide/: SUPPORT_NEW_MODEL.md
docs/user_guide/: ATTENTION.md  CACHE_API.md  CONTEXT_PARALLEL.md  CUDA_GRAPH.md  DBCACHE_DESIGN.md  ENV.md  EXTRA_PARALLEL.md  HYBRID_PARALLEL.md  INSTALL.md  OFFLOAD.md  OVERVIEWS.md  QUANTIZATION.md  TENSOR_PARALLEL.md
examples/: .gitignore  README.md  generate.py
examples/api/: run_cache_refresh_flux.py  run_cache_refresh_wan_2.2.py  run_steps_mask.py  run_transformer_only.py
examples/ptq/: flux2_svdq_ptq.py
src/cache_dit/: __init__.py  envs.py  generate.py  logger.py  profiler.py  summary.py  utils.py
tests/api/: test_example_warmup_seed.py  test_forward_pattern.py  test_load_configs.py  test_refresh_context.py  test_set_attn_backend.py  test_taylorseers.py  utils.py
tests/kernels/: _svdq_test_utils.py  test_cutedsl_ops.py  test_opaque_scaled_mm.py  test_ops_backend_selection.py  test_rowwise_cudagraph_partition.py  test_svdquant_compile.py  test_svdquant_ptq.py  test_svdquant_quantizer.py  test_svdquant_runtime.py  test_triton_ops.py
tests/parallelism/: test_async_ulysses_registry.py  test_attention_dispatch.py  test_context_parallel_core.py  test_context_parallel_entrypoint.py  test_distributed_primitives.py  test_flux_context_parallel_slow.py  test_templated_usp.py  test_tp_utils_divisible_attr.py
tests/quantization/: _svdq_test_utils.py  test_layerwise_offload.py  test_quantize_config.py  test_svdquant_compile.py  test_svdquant_dq.py  test_svdquant_imports.py  test_svdquant_ptq.py  test_svdquant_quantizer.py
(+1166 files in other folders)
