[project]

name = "cache_dit"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [{name = "DefTruth, vipshop.com, etc."}]
description = "Cache-DiT: A PyTorch-native Inference Engine with Hybrid Cache Acceleration and Massive Parallelism for DiTs."
maintainers = [{name="DefTruth, vipshop.com, etc"}] 
readme = "README.md" 

dependencies = [
    "packaging",
    "pyyaml",
    "torch>=2.7.1",
    "diffusers>=0.36.0",
    "transformers>=4.55.2",
]

[project.optional-dependencies]

parallelism = [
    "einops>=0.8.1",
]

quantization = [
    "torchao>=0.14.1",
    "bitsandbytes>=0.48.1",
    "safetensors>=0.5.3",
]

metrics = [
    "scipy",
    "scikit-image",
    "image-reward",
    "lpips==0.1.4",
]

dev = [
    "packaging",
    "pre-commit",
    "pytest>=7.0.0,<8.0.0",
    "pytest-html",
    "expecttest",
    "hypothesis",
    "accelerate",
    "peft",
    "protobuf",
    "sentencepiece",
    "opencv-python-headless",
    "ftfy",
    "scikit-image",
]

docs = [
    # Pinning mkdocs to 1.6.1 and mkdocs-material to 9.7.1 to avoid 
    # the breaking changes in mkdocs 2.0.0, which causes the CI failure 
    # in the check-mkdocs workflow.
    # https://squidfunk.github.io/mkdocs-material/blog/2026/02/18/mkdocs-2.0/
    "mkdocs==1.6.1",
    "mkdocs-api-autonav",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python",
    "mkdocs-gen-files",
    "mkdocs-awesome-nav",
    "mkdocs-glightbox",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-minify-plugin",
    "regex",
    "ruff",
    "pydantic",
]

all = [
    "cache-dit[parallelism]",
    "cache-dit[quantization]",
    "cache-dit[metrics]",
]

[project.urls]

Repository = "https://github.com/vipshop/cache-dit"
Homepage = "https://github.com/vipshop/cache-dit" 
GitHub = "https://github.com/vipshop/cache-dit"

[project.scripts]

cache-dit-metrics = "cache_dit.metrics:main" # metric entrypoint
cache-dit-generate = "cache_dit.generate:entrypoint" # example entrypoint

[build-system]

requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
    "ignore:`torch.jit.script_method` is deprecated.",
    "ignore:Dynamo detected a call to a `functools\\.lru_cache`-wrapped function:UserWarning:torch\\._dynamo\\.variables\\.functions",
]
